<resources>
    <string name="app_name">The Knight\'s Tour</string>
    <string name="new_game">New Game</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="main_image">Main Image</string>
    <string name="exit">Exit</string>
    <string name="count_of_rows">Number of rows:</string>
    <string name="count_of_columns">Number of columns:</string>
    <string name="finish_on_start">Back to the starting square</string>
    <string name="count_of_hints">Amount of Hints:</string>
    <string name="count_of_rows_text">%1$s  (from 1 to %1$s)</string>
    <string name="count_of_columns_text">%1$s  (from A to %2$s)</string>
    <string name="choose_msg">You choose %1$s</string>
    <string name="without_hints">without hints</string>
    <string name="not_limited">unlimited</string>
    <string name="hint">Hint</string>
    <string name="leftArrow"><![CDATA[<]]></string>
    <string name="right_arrow"><![CDATA[>]]></string>
    <string name="start">Start</string>
    <string name="choose_start_field">Select starting square…</string>
    <string name="confirm_start_field">Confirm starting square</string>
    <string name="correct">Correct</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_settings">Confirm settings</string>
    <string name="bad_settings">This setup is considered to be unsolvable, but you can try</string>
    <string name="tryw">Try</string>
    <string name="available_combination">Solvable</string>
    <string name="maybe_not">Might be unsolvable</string>
    <string name="no_combination">Unsolvable</string>
    <string name="calculate">Processing…</string>
    <string name="need_to_reach_start_field">You need to get the Knight back to the starting square</string>
    <string name="no_combintaion_from_start_field">The puzzle in unsolvable with selected starting square, but you can try if you want</string>
    <string name="congratulation">Congratulations!</string>
    <string name="you_win">You Win! Copy your path to clip board?</string>
    <string name="showPath">Show</string>
    <string name="continiue">Continue</string>
    <string name="continueGame">Continue Game</string>
    <string name="all_me">"Coded by Anton Dmitrochenko \nmotohd@yandex.ru "</string>
    <string name="copy_path">Copy</string>
    <string name="go_to_main_menu">Main Menu</string>
    <string name="ok">OK</string>
    <string name="path_copy_to_clip">Path was coped to clipboard</string>
</resources>