<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="80dp"
    tools:context=".activity.MainActivity">

    <FrameLayout
        android:id="@+id/logo_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:contentDescription="@string/main_image"
            android:src="@drawable/chess_horse_active" />

    </FrameLayout>

    <Button
        android:id="@+id/continueGame"
        style="@style/mainButtons"
        android:text="@string/continueGame"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_container"
        tools:visibility="visible" />

    <Button
        android:id="@+id/newGame"
        style="@style/mainButtons"
        android:text="@string/new_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/continueGame" />

    <Button
        android:id="@+id/about"
        style="@style/mainButtons"
        android:text="@string/about"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newGame" />

    <Button
        android:id="@+id/exit"
        style="@style/mainButtons"
        android:text="@string/exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about" />

</androidx.constraintlayout.widget.ConstraintLayout>