<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/boardScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CheckBoard">

    <GridLayout
        android:id="@+id/board"
        android:layout_width ="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:verticalSpacing="0dip"
        android:useDefaultMargins="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >
    </GridLayout>

    <TextView
        android:id="@+id/pathText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/board"
        tools:text="Choose start field"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/hintBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hint"
            android:background="@color/grey"
           />

        <Button
            android:id="@+id/leftBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/leftArrow"
            android:background="@color/grey"
            android:layout_marginEnd="1px"
            android:layout_marginStart="1px"
             />

        <Button
            android:id="@+id/rightBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/right_arrow"
            android:background="@color/grey" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>